--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,16 @@
 <html lang="en" class="h-full">
 
 <head>
+    <script>
+      // Redirect to login if not authenticated
+      (function() {
+        const token = localStorage.getItem('token');
+        const user = localStorage.getItem('user');
+        if (!token || !user) {
+          window.location.href = '/login.html';
+        }
+      })();
+    </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Business Manager Pro - Shrimata BillBook</title>
@@ -312,7 +322,36 @@
 </head>
 <body class="h-full min-h-screen w-full flex items-center justify-center bg-slate-100 text-slate-800" style="min-height: 100vh;">
   <!-- Reference Screenshot for Developers: <img src='/IMG_7938.png' alt='Mobile Dashboard Reference' style='max-width: 100%; display: none;' /> -->
-  <div id="app" class="flex flex-col bg-white w-full max-w-[420px] min-h-screen h-full shadow-lg overflow-hidden" style="height: 100vh;"><!-- Header with Pending Collection Alert -->
+  <div id="app" class="flex flex-col bg-white w-full max-w-[420px] min-h-screen h-full shadow-lg overflow-hidden" style="height: 100vh;">
+    <script>
+      // Set user info in header and restrict tabs for 'user' role
+      (function() {
+        const user = JSON.parse(localStorage.getItem('user') || '{}');
+        document.getElementById('user-name').textContent = user.fullName || user.username || 'User';
+        const badge = document.getElementById('user-role-badge');
+        if (user.role === 'user') {
+          badge.textContent = 'USER';
+          badge.classList.remove('bg-purple-600');
+          badge.classList.add('bg-blue-600');
+          // Hide all tabs except Production
+          const allowed = ['tab-workers'];
+          document.querySelectorAll('.tab-btn').forEach(btn => {
+            if (!allowed.includes(btn.id)) {
+              btn.style.display = 'none';
+            } else {
+              btn.style.display = '';
+            }
+          });
+          // Show only production tab content
+          document.querySelectorAll('.tab-content').forEach(tc => {
+            if (tc.id !== 'content-workers') tc.style.display = 'none';
+            else tc.style.display = '';
+          });
+          // Set production tab as active
+          document.getElementById('tab-workers').classList.add('tab-active');
+        }
+      })();
+    </script>
     <header class="bg-white shadow-sm border-b border-slate-200 px-4 py-3 flex-shrink-0">
       <div class="w-full flex flex-col items-center gap-2 pt-2 pb-2">
         <h1 id="app-title" class="text-xl font-bold text-slate-800 w-full text-center tracking-tight leading-tight mb-2">Shrimata Business Manager Pro</h1>
