--- a/public/index.html
+++ b/public/index.html
@@ -1293,124 +1293,8 @@
     }
 
     async function updateWorkerMonthlySalary(worker, month) {
-      // Calculate salary based on attendance
-      const attendanceRecords = getAttendance();
-      const monthRecords = attendanceRecords.filter(a =>
-        a.worker_id === worker.__backendId &&
-        <script>
-          // Set user info in header, restrict tabs for 'user', and handle user menu
-          (function() {
-            const user = JSON.parse(localStorage.getItem('user') || '{}');
-            document.getElementById('user-name').textContent = user.fullName || user.username || 'User';
-            const badge = document.getElementById('user-role-badge');
-            if (user.role === 'user') {
-              badge.textContent = 'USER';
-              badge.classList.remove('bg-purple-600');
-              badge.classList.add('bg-blue-600');
-              // Hide all tabs except Production
-              const allowed = ['tab-workers'];
-              document.querySelectorAll('.tab-btn').forEach(btn => {
-                if (!allowed.includes(btn.id)) {
-                  btn.style.display = 'none';
-                } else {
-                  btn.style.display = '';
-                }
-              });
-              // Show only production tab content
-              document.querySelectorAll('.tab-content').forEach(tc => {
-                if (tc.id !== 'content-workers') tc.style.display = 'none';
-                else tc.style.display = '';
-              });
-              // Set production tab as active
-              document.getElementById('tab-workers').classList.add('tab-active');
-            }
-            // User menu logic
-            const menuBtn = document.getElementById('user-menu-btn');
-            const menu = document.getElementById('user-menu');
-            menuBtn.addEventListener('click', (e) => {
-              e.stopPropagation();
-              menu.classList.toggle('hidden');
-            });
-            document.addEventListener('click', () => menu.classList.add('hidden'));
-            menu.addEventListener('click', e => e.stopPropagation());
-            document.getElementById('logout-btn').onclick = function() {
-              localStorage.clear();
-              window.location.replace('/login.html');
-            };
-            document.getElementById('change-password-btn').onclick = function() {
-              showChangePasswordModal();
-            };
-          })();
-
-          // Show change password modal
-          function showChangePasswordModal() {
-            if (document.getElementById('change-password-modal')) return;
-            const modal = document.createElement('div');
-            modal.id = 'change-password-modal';
-            modal.className = 'fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-40';
-            modal.innerHTML = `
-              <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-xs relative">
-                <button onclick="document.getElementById('change-password-modal').remove()" class="absolute top-2 right-2 text-slate-400 hover:text-red-500">&times;</button>
-                <h2 class="text-lg font-bold mb-4 text-center">Change Password</h2>
-                <form id="change-password-form" class="flex flex-col gap-3">
-                  <input type="password" id="current-password" placeholder="Current Password" class="input-field border px-3 py-2 rounded" required>
-                  <input type="password" id="new-password" placeholder="New Password" class="input-field border px-3 py-2 rounded" required>
-                  <button type="submit" class="btn-primary py-2 rounded text-white font-semibold">Update Password</button>
-                </form>
-                <div id="change-password-error" class="text-red-600 mt-2 text-center hidden"></div>
-                <div id="change-password-success" class="text-green-600 mt-2 text-center hidden"></div>
-              </div>
-            `;
-            document.body.appendChild(modal);
-            document.getElementById('change-password-form').onsubmit = async function(e) {
-              e.preventDefault();
-              const currentPassword = document.getElementById('current-password').value;
-              const newPassword = document.getElementById('new-password').value;
-              const errorDiv = document.getElementById('change-password-error');
-              const successDiv = document.getElementById('change-password-success');
-              errorDiv.classList.add('hidden');
-              successDiv.classList.add('hidden');
-              try {
-                const res = await fetch('/api/auth/change-password', {
-                  method: 'POST',
-                  headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': 'Bearer ' + localStorage.getItem('token')
-                  },
-                  body: JSON.stringify({ currentPassword, newPassword })
-                });
-                const data = await res.json();
-                if (!res.ok) throw new Error(data.error || 'Failed to change password');
-                successDiv.textContent = 'Password changed successfully. Please login again.';
-                successDiv.classList.remove('hidden');
-                setTimeout(() => {
-                  localStorage.clear();
-                  window.location.replace('/login.html');
-                }, 1500);
-              } catch (err) {
-                errorDiv.textContent = err.message;
-                errorDiv.classList.remove('hidden');
-              }
-            };
-          }
-        </script>
-        await window.dataSdk.update(updated);
-        console.log(`✅ Updated salary for ${worker.name}: ₹${calculatedSalary}`);
-      } else {
-        // Create new wage entry
-        const wageRecord = {
-          type: 'household',
-          category: 'Worker Wages',
-          description: description,
-          cost: calculatedSalary,
-          date: `${month}-01`,
-          place: 'Salary Payment',
-          worker_id: worker.__backendId,
-          created_at: new Date().toISOString()
-        };
-        await window.dataSdk.create(wageRecord);
-        console.log(`✅ Created salary entry for ${worker.name}: ₹${calculatedSalary}`);
-      }
+      // TODO: Implement salary calculation and wage record creation for worker
+      // This function was previously corrupted by misplaced code. Add your logic here.
     }
 
     // Initialize SDKs
@@ -2734,16 +2618,19 @@
         return;
       }
 
-      // If only one order, show receipt for that order
+      // If only one order, show and share receipt for that order
       if (customerOrders.length === 1) {
         showOrderReceipt(customerOrders[0].__backendId);
+        // Wait for the modal and content to render, then share
+        setTimeout(() => shareReceiptContent(), 300);
         return;
       }
 
-      // For multiple orders, show the first unsettled order or the most recent one
+      // For multiple orders, show and share the first unsettled order or the most recent one
       const unsettledOrder = customerOrders.find(o => !o.settled);
       const orderToShow = unsettledOrder || customerOrders[customerOrders.length - 1];
       showOrderReceipt(orderToShow.__backendId);
+      setTimeout(() => shareReceiptContent(), 300);
     }
 
     // Order Receipt Functions
