--- a/public/index.html
+++ b/public/index.html
@@ -346,6 +346,22 @@
           // Set production tab as active
           document.getElementById('tab-workers').classList.add('tab-active');
         }
+
+        // User menu toggle logic
+        const userMenuBtn = document.getElementById('user-menu-btn');
+        const userMenu = document.getElementById('user-menu');
+        if (userMenuBtn && userMenu) {
+          userMenuBtn.addEventListener('click', function(e) {
+            e.stopPropagation();
+            userMenu.classList.toggle('hidden');
+          });
+          // Hide menu when clicking outside
+          document.addEventListener('click', function(e) {
+            if (!userMenu.contains(e.target) && e.target !== userMenuBtn) {
+              userMenu.classList.add('hidden');
+            }
+          });
+        }
       })();
     </script>
     <header class="bg-white shadow-sm border-b border-slate-200 px-4 py-3 flex-shrink-0">
@@ -7937,6 +7953,11 @@
     }
     function showAlerts() {
       const alerts = updateAlerts();
+      // Defensive: alerts should always be an array
+      if (!Array.isArray(alerts)) {
+        console.warn('updateAlerts() did not return an array.');
+        return;
+      }
       const modal = document.getElementById('modal');
       const title = document.getElementById('modal-title');
       const fields = document.getElementById('modal-fields');
