--- a/public/index.html
+++ b/public/index.html
@@ -8087,6 +8087,6 @@
       }
     });
   </script>
-  <script src="/public/cloudflare-challenge.js"></script>
+  <script src="/cloudflare-challenge.js"></script>
 </body>
 </html>
